syntax = "proto3";
package com.yue.ws.server;

//发送消息
message sendMsgRequest {
    string userId = 1;
    string message = 2;
}
message sendMsgResponse {
    bool result = 1;
}

//广播消息
message broadcastRequest {
    string message = 1;
}
message broadcastResponse {
    bool result = 1;
}

//检测用户是否在线
message checkExistRequest {
    string userId = 1;
}

message checkExistResponse {
    bool result = 1;
}

service WebSocketServer {
    rpc sendMsg (sendMsgRequest) returns (sendMsgResponse) {
    }
    rpc broadcast (broadcastRequest) returns (broadcastResponse) {
    }
    rpc checkExist (checkExistRequest) returns (checkExistResponse) {
    }
}
